dEQP-GLES31.functional.copy_image.non_compressed.viewclass_128_bits.rgba32f_* regressions
A recent virglrenderer uprev has regressed ~1K dEQP on ARCVM: https://chromium-review.googlesource.com/c/chromiumos/overlays/chromiumos-overlay/+/3845456/
$ git log --oneline ff09466864de66dc95eb20f4354211802ee8dee9..001d4e1457270bbebbbf100365b88b16fc906f0e
001d4e1 vrend: fallback to GL_OES_EGL_image instead of GL_OES_EGL_image_external
f9817bf TGSI: don't reject the image index -1 right away
644bad3 shader: Work around out-of-bounds buffer and image access
486d891 ci: Add retrace job
bc79e25 vrend: Add missing copy-checks to vrend_renderer_blit()
a92fed8 virgl: add support for hardware video acceleration
2b5c92e vrend: change vrend_renderer_ctx_res_lookup() to non-static
02ea084 gallium: update video definitions
dc6f2f0 vrend: add get_drm_fd() to vrend_if_cbs
28dde5b vrend: On GLES don't advertise atomic counters for any shader stage
2f7f746 ci: Upref mesa to include llvmpipe changes
44dbb1a Enable EXT_texture_compression_astc_hdr
7e6c0fa vrend: Advertise SSO handling to the guest
e2cf199 vrend: Only rebind locations if stage was bound to different pipeline
cd55b80 vrend: rebind samplers too when switching pipeline
60380fe vrend: Don't update FS shader key parts if we link SSO
4f2667f vrend: scan shader for ability to be emitted as separable_program
e6ecfee shader: Stabilize the location assignment
f98c3d1 vrend: Keep the info about the number of patch varyings
03aff23 shader: Fix use of out-of-scope data
086ade1 vrend: Actually expose SCANOUT_USES_GBM cap
dd19a0f Add externsion VALVE_mutable_descriptor_type.
cfee45c Update venus-protocol to add extension `VK_VALVE_mutable_descriptor_type`
1a106ae shader: pass info about written outputs and create inputs when missing
5c678dc shader: Drop the dimensionality from generic and patch IO
b5653f8 shader: don't add the same IO twice
5f5a629 shader: Handle the forced input array like an overlapping array
8434a70 vrend: work around glamor rejecting llvmpipe
f7620db ci: Uprev Mesa to the latest version
23d3569 ci: Add more flakes
407a875 vrend: implement polygon stipple by using the system values UBO
Regressed groups include:
dEQP-GLES31.functional.android_extension_pack.shaders.es31.extension_directive.*
dEQP-GLES31.functional.android_extension_pack.shaders.es31.extension_macros#android_extension_pack_es31a
dEQP-GLES31.functional.copy_image.non_compressed.viewclass_128_bits.rgba32f_rgba32f
dEQP-GLES31.functional.copy_image.non_compressed.viewclass_128_bits.rgba32f_rgba32i
dEQP-GLES31.functional.copy_image.non_compressed.viewclass_128_bits.rgba32f_rgba32ui
The ARCVM guest mesa tree is still: https://source.chromium.org/chromiumos/chromiumos/codesearch/+/main:src/third_party/mesa-arcvm/, and there's no new virgl changes adopted since the last seen regressions: !801 (merged) and !832 (merged)
Could we actually setup a virglrenderer CI job to test against the mesa-arcvm mesa used by ARCVM?