shader: Emit input arrays the way the prevv shader emits outputs

If a pre-NTT guest mesa version is run the outputs may still be
emitted by the TGSI as arrays, and we have to emit the same layout,
especially for the inputs that are emitted just to sync the IO
interfaces.

Fixes: 1a106aed9d435fc71ca64332796f77942d95dfc8
   shader: pass info about written outputs and create inputs when missing

Related: https://gitlab.freedesktop.org/virgl/virglrenderer/-/issues/281

Signed-off-by: Gert Wollny <gert.wollny@collabora.com>
Part-of: <https://gitlab.freedesktop.org/virgl/virglrenderer/-/merge_requests/903>